--- a/PMS-PropertyHapa.Staff/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Shared/_Layout.cshtml
@@ -156,6 +156,7 @@
                             <ul class="profile-dropdown onhover-show-div">
                                 <li><a href="@Url.Action("UpdateProfile", "auth")"><i data-feather="user"></i><span>Profile</span></a></li>
                                 <li><a href="@Url.Action("ChangePassword", "auth")"><i data-feather="user"></i><span>Change Password</span></a></li>
+                                <li><a href="@Url.Action("TiwiloView", "Communication")"><i data-feather="user"></i><span>Tiwilo</span></a></li>
                                 <li><a href="#" id="changeColorSchemaButton">Change Color Schema</a></li>
                                 <li><a href="@Url.Action("Login","auth")"><i data-feather="log-in"> </i><span>Log Out</span></a></li>
                             </ul>
