--- a/PMS-PropertyHapa.Staff/Views/Communication/TiwiloView.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Communication/TiwiloView.cshtml
@@ -1,7 +1,11 @@
-﻿@* @using Property_Management_Sys.Areas.Identity.Data
-@model ApplicationUser
+﻿@using System.Globalization;
+@using System.Resources;
+@using PMS_PropertyHapa.Models.DTO;
+@model PMS_PropertyHapa.Models.DTO.TiwiloDto;
+
+
 @{
-    ViewData["Title"] = @Localize("Add_Tiwilo_Credentials");
+    ViewData["Title"] = "Add_Tiwilo_Credentials";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -11,48 +15,47 @@
             <div class="page-body">
                 <div class="container-xl px-4 mt-4">
                     <hr class="mt-0 mb-4">
-                    <div class="row"><div class="col-xl-12"> <center><h3>@Html.ValidationSummary(true, "", new { @class = "text-danger" })</h3></center></div></div>
+                    <div class="row">
+                        <div class="col-xl-12">
+                            <center><h3>@Html.ValidationSummary(true, "", new { @class = "text-danger" })</h3></center>
+                        </div>
+                    </div>
                     <div class="row">
                         <div class="col-lg-12">
-                            <form id="tiwiloForm" asp-action="AddTiwilo" asp-controller="Announcement" method="post">
-                                <input type="hidden" asp-for="Id" />
-                                <div class="col-xl-12">
-                                    <div class="card mb-4">
-                                        <div class="card-body">
-                                            <div class="form-horizontal">
-                                                <h4>@Localize("Add_Tiwilo_Credentials")</h4>
-                                                <hr />
-                                                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                                                <div class="row gx-3 mb-3">
-                                                    <div class="col-md-6">
-                                                        <label class=" mb-1">@Localize("Account_SID")</label>
-                                                        <input asp-for="AccountSid" class="form-control" aria-required="true" />
-                                                    </div>
+                            <div class="col-xl-12">
+                                <div class="card mb-4">
+                                    <div class="card-body">
+                                        <div class="form-horizontal">
+                                            <h4>Add Tiwilo Credentials</h4>
+                                            <hr />
+                                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                            <div class="row gx-3 mb-3">
+                                                <div class="col-md-6">
+                                                    <label class="mb-1 form-label">Account SID</label>
+                                                    <input id="AccountSid" class="form-control" aria-required="true" />
                                                 </div>
-                                                <div class="row gx-3 mb-3">
-                                                    <div class="col-md-6">
-                                                        <label class=" mb-1">@Localize("Auth_Token")</label>
-                                                        <input asp-for="AuthToken" class="form-control" aria-required="true" />
-                                                    </div>
+                                            </div>
+                                            <div class="row gx-3 mb-3">
+                                                <div class="col-md-6">
+                                                    <label class="mb-1 form-label">Auth Token</label>
+                                                    <input id="AuthToken" class="form-control" aria-required="true" />
                                                 </div>
-                                                <div class="row gx-3 mb-3">
-                                                    <div class="col-md-6">
-                                                        <label class=" mb-1">@Localize("Tiwilo_Number")</label>
-                                                        <input asp-for="TiwiloPhone" class="form-control" aria-required="true" />
-                                                    </div>
+                                            </div>
+                                            <div class="row gx-3 mb-3">
+                                                <div class="col-md-6">
+                                                    <label class="mb-1 form-label">Tiwilo Number</label>
+                                                    <input id="TiwiloPhone" class="form-control" aria-required="true" />
                                                 </div>
-                                                <div class="row gx-3 mb-3">
-                                                    <div class="col-md-6" style="padding-top:25px!important">
-                                                        <div class="col-md-offset-2 col-md-10">
-                                                            <input type="submit" value="@Localize("Save")" class="btn btn-default" />
-                                                        </div>
-                                                    </div>
+                                            </div>
+                                            <div class="row gx-3 mb-3">
+                                                <div class="col-md-6">
+                                                    <button id="saveButton" class="btn btn-primary">Save</button>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                            </form>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -61,5 +64,44 @@
     </div>
 </div>
 
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script>
+    $(document).ready(function () {
+        $('#saveButton').click(function () {
+            var userId = localStorage.getItem('userId');
+            var formData = new FormData();
+            formData.append('UserID', userId);
+            formData.append('AccountSid', $('#AccountSid').val());
+            formData.append('AuthToken', $('#AuthToken').val());
+            formData.append('TiwiloPhone', $('#TiwiloPhone').val());
 
- *@
+            $.ajax({
+                type: 'POST',
+                url: '/Communication/AddTiwilo',
+                data: formData,
+                processData: false,
+                contentType: false,
+                success: function (result) {
+                    Swal.fire({
+                        toast: true,
+                        position: 'top-end',
+                        showConfirmButton: false,
+                        timer: 3000,
+                        timerProgressBar: true,
+                        icon: result.success ? 'success' : 'error',
+                        title: result.message
+                    });
+
+                    window.location.reload();
+                },
+                error: function (error) {
+                    Swal.fire({
+                        icon: 'error',
+                        title: 'An error occurred.',
+                        text: error.statusText
+                    });
+                }
+            });
+        });
+    });
+</script>
