--- a/PMS-PropertyHapa.Admin/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Shared/_Layout.cshtml
@@ -239,6 +239,13 @@
                                         <li><a href="@Url.Action("UnInvoices","Invoice")">View UnPiad Invoices</a></li>
                                     </ul>
                                 </li>
+
+                                <li class="sidebar-list">
+                                    <a href="@Url.Action("AddSubscription","Subscription")" class="sidebar-link sidebar-title" href="#">
+                                        <svg b-ab5quygad7="" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path b-ab5quygad7="" d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline b-ab5quygad7="" points="13 2 13 9 20 9"></polyline></svg><span>Subscriptions</span>
+                                    </a>
+                                   
+                                </li>
                             </ul>
                             <div class="sidebar-img-section">
                                 <div class="sidebar-img-content">
